--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.version>3.8.0</maven.compiler.version>
-        <maven.surefire.version>3.0.0-M3</maven.surefire.version>
+        <maven.surefire.version>3.0.0-M5</maven.surefire.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>7.7.1</version>
+            <version>6.14.3</version>
             <scope>test</scope>
         </dependency>
 
@@ -63,6 +63,8 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven.surefire.version}</version>
                     <configuration>
+                        <testSourceDirectory>${project.basedir}/src/test/java</testSourceDirectory>
+                        <testClassesDirectory>${project.build.directory}/test-classes</testClassesDirectory>
                         <suiteXmlFiles>
                             <suiteXmlFile>src/test/resources/parallelSuite.xml</suiteXmlFile>
                         </suiteXmlFiles>
